--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.16.17",
+    "@vite-pwa/assets-generator": "^0.0.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/test-utils": "^2.3.2",
@@ -33,6 +34,7 @@
     "start-server-and-test": "^2.0.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
+    "vite-plugin-pwa": "^0.16.4",
     "vitest": "^0.32.0",
     "vue-tsc": "^1.6.5"
   }
