--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "axios": "^1.4.0",
+    "geojson": "^0.5.0",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.3",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
@@ -21,7 +25,9 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
+    "@types/geojson": "^7946.0.10",
     "@types/jsdom": "^21.1.1",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^18.16.17",
     "@vite-pwa/assets-generator": "^0.0.3",
     "@vitejs/plugin-vue": "^4.2.3",
