Add missing import for node typescript

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,8 @@
     "cypress.config.*",
     "nightwatch.conf.*",
     "playwright.config.*",
-    "manifest.pwa.*"
+    "manifest.pwa.*",
+    "runtime.caching.pwa.*"
   ],
   "compilerOptions": {
     "composite": true,
