--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "@vueuse/core": "^10.2.0",
     "axios": "^1.4.0",
     "geojson": "^0.5.0",
     "leaflet": "^1.9.4",
