--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@mdi/js": "^7.2.96",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/core": "^10.2.0",
     "axios": "^1.4.0",
@@ -25,6 +26,11 @@
     "vuetify": "^3.3.5"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@mdi/font": "^7.2.96",
     "@tsconfig/node18": "^2.0.1",
     "@types/geojson": "^7946.0.10",
     "@types/jsdom": "^21.1.1",
@@ -37,6 +43,7 @@
     "@vue/tsconfig": "^0.4.0",
     "cypress": "^12.14.0",
     "jsdom": "^22.1.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.63.5",
     "start-server-and-test": "^2.0.0",
